// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enum should generate the correct schema with enum 1`] = `
Object {
  "access": Array [],
  "components": Array [
    Object {
      "disabled": false,
      "key": "test",
      "label": "Test",
      "type": "radio",
      "validate": Object {
        "required": false,
      },
      "values": Array [
        Object {
          "label": "VALUE1",
          "shortcut": "",
          "value": "VALUE1",
        },
        Object {
          "label": "VALUE2",
          "shortcut": "",
          "value": "VALUE2",
        },
      ],
    },
  ],
  "display": "form",
  "machineName": "test",
  "name": "test",
  "submissionAccess": Array [],
  "tags": Array [],
  "title": "Test",
  "type": "form",
}
`;

exports[`Enum should generate the correct schema with select 1`] = `
Object {
  "access": Array [],
  "components": Array [
    Object {
      "data": Object {
        "json": "[{\\"label\\":\\"VALUE1\\",\\"value\\":\\"VALUE1\\"},{\\"label\\":\\"VALUE2\\",\\"value\\":\\"VALUE2\\"}]",
      },
      "dataSrc": "json",
      "disabled": false,
      "idPath": "value",
      "input": true,
      "key": "test",
      "label": "Test",
      "selectThreshold": 0.3,
      "template": "<span>{{ item.label }}</span>",
      "type": "select",
      "validate": Object {
        "required": false,
      },
      "valueProperty": "value",
      "widget": "choicesjs",
    },
  ],
  "display": "form",
  "machineName": "test",
  "name": "test",
  "submissionAccess": Array [],
  "tags": Array [],
  "title": "Test",
  "type": "form",
}
`;

exports[`Enum should generate the correct schema with select custom value 1`] = `
Object {
  "access": Array [],
  "components": Array [
    Object {
      "data": Object {
        "json": "[{\\"label\\":\\"label VALUE1\\",\\"value\\":\\"VALUE1\\"},{\\"label\\":\\"label VALUE2\\",\\"value\\":\\"VALUE2\\"}]",
      },
      "dataSrc": "json",
      "disabled": false,
      "idPath": "value",
      "input": true,
      "key": "test",
      "label": "Test",
      "selectThreshold": 0.3,
      "template": "<span>{{ item.label }}</span>",
      "type": "select",
      "validate": Object {
        "required": false,
      },
      "valueProperty": "value",
      "widget": "choicesjs",
    },
  ],
  "display": "form",
  "machineName": "test",
  "name": "test",
  "submissionAccess": Array [],
  "tags": Array [],
  "title": "Test",
  "type": "form",
}
`;
